npm installed root

--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "scripts": {
-    "start:dev": "webpack-dev-server",
-    "start": "webpack --watch",
-    "build": "webpack --mode production"
+    "scripts": {
+      "start:dev": "concurrently \"cd client && npm run build\" \"cd server && npm run server\" ",
+      "start": "npm run build && cd server && node server.js",
+      "server": "cd server node server.js --ignore client",
+      "build": "cd client && npm run build",
+      "install": "cd server && npm i && cd ../client && npm i",
+      "client": "cd client && npm start"
   },
   "keywords": [],
   "author": "",
